--- a/FacesApi.csproj
+++ b/FacesApi.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenCvSharp4" Version="4.3.0.20200524" />
+    <PackageReference Include="OpenCvSharp4.Windows" Version="4.3.0.20200524" />
+  </ItemGroup>
+
 
 </Project>
